--- a/dpass/package.json
+++ b/dpass/package.json
@@ -6,14 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "mongodb": "^4.8.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.5",
+    "@types/node": "^18.7.5",
     "@types/react": "16.9.17",
-    "typescript": "4.6.3"
+    "prisma": "^4.14.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.3"
   }
 }
