--- a/dpass/package.json
+++ b/dpass/package.json
@@ -15,7 +15,10 @@
   "devDependencies": {
     "@types/node": "^18.7.5",
     "@types/react": "16.9.17",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "prisma": "^4.14.1",
+    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.3"
   }
